--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,2 +1,3 @@
-# API Configuration
-NEXT_PUBLIC_API_URL=http://localhost:3001
+BACKEND_URL=https://c9d4sqomvuc6wy-3001.proxy.runpod.net
+# Comentar o eliminar NEXT_PUBLIC_API_URL
+# NEXT_PUBLIC_API_URL=http://localhost:3001
