--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.294.0",
     "next": "14.0.0",
     "react": "18.2.0",
